fix: add gap to description of message

--- a/src/components/ChatPage/ChatForm/ChatBox/MessageList/Message/Message.scss
+++ b/src/components/ChatPage/ChatForm/ChatBox/MessageList/Message/Message.scss
@@ -45,6 +45,7 @@
     bottom: 1px;
     right: 6px;
     opacity: 0.4;
+    gap: 8px;
     .message__category {
       text-transform: capitalize;
     }
